--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -87,6 +87,9 @@
                 <Separator />
                 <MenuItem Header="Exit" Click="MenuItemExit_Click"/>
             </MenuItem>
+            <MenuItem Header="Workflow">
+                <MenuItem Header="Add Tab" Name="menuAddTab" Click="menuAddTab_Click"/>
+            </MenuItem>
         </Menu>
         <TabControl x:Name="MainTab" Grid.Row="1" ItemTemplate="{StaticResource MainTabHeaderTemplate}"
                     ContentTemplate="{StaticResource MainTabItemTemplate}" Style="{StaticResource EJTabControl}" ItemContainerStyle="{StaticResource EJTabItem}">
