Added Help/About Dialog

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -87,6 +87,10 @@
                 <Separator />
                 <MenuItem Header="Exit" Click="MenuItemExit_Click"/>
             </MenuItem>
+            <MenuItem Header="Help">
+                <MenuItem Header="About" Name="menuAbout" Click="menuAbout_Click">
+                </MenuItem>
+            </MenuItem>
         </Menu>
         <TabControl x:Name="MainTab" Grid.Row="1" ItemTemplate="{StaticResource MainTabHeaderTemplate}"
                     ContentTemplate="{StaticResource MainTabItemTemplate}" Style="{StaticResource EJTabControl}" ItemContainerStyle="{StaticResource EJTabItem}">
