--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -88,7 +88,7 @@
                 <MenuItem Header="Exit" Click="MenuItemExit_Click"/>
             </MenuItem>
             <MenuItem Header="Help">
-                <MenuItem Header="About" Name="menuAbout" Click="menuAbout_Click">
+                <MenuItem Header="About" Name="menuAbout" Click="menuAbout_Click" />
             </MenuItem>
             <MenuItem Header="Workflow">
                 <MenuItem Header="Add Tab" Name="menuAddTab" Click="menuAddTab_Click"/>
