--- a/Windows/AboutDialog.xaml
+++ b/Windows/AboutDialog.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EasyJob.Windows"
         mc:Ignorable="d"
-        WindowStyle="None"
-        Title="About EasyJob" Height="380" Width="600" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        WindowStyle="SingleBorderWindow"
+        Title="About EasyJob" Height="380" Width="610" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="100"/>
@@ -18,19 +18,18 @@
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="0" Grid.Column="0">
-            <Image Source="/Images/github.png" Height="100" Width="100"/>
+            <Image Source="/Images/github.png" Height="100" Width="100" MouseLeftButtonDown="GithubImage_MouseLeftButtonDown" Cursor="Hand"/>
         </StackPanel>
         <StackPanel Grid.Row="0" Grid.Column="1">
-            <Label Name="lblTitle" Content="EasyJob" Margin="10,10,50,5"/>
+            <Label Name="lblTitle" Content="EasyJob Executor" Margin="10,10,50,5"/>
             <Label Name="lblLicence" Content="Licence: Apache-2.0" Margin="10,5,50,5"/>
             <Label Name="lblVersion" Margin="10,5,50,5"/>
         </StackPanel>
         <StackPanel Grid.Row="1" Grid.Column="0"/>
         <StackPanel Grid.Row="1" Grid.Column="1">
             <RichTextBox Margin="10,10,10,10" Name="RichTextBox1" HorizontalAlignment="Left" Width="472" Height="210" Background="Black" Foreground="White"
-                         BorderThickness="0" IsDocumentEnabled="True" IsReadOnly="True">
+                         BorderThickness="0" IsDocumentEnabled="True" IsReadOnly="True" VerticalScrollBarVisibility="Visible">
             </RichTextBox>
         </StackPanel>
-        <Button Name="btnClose" Content="Close" Grid.Column="1" HorizontalAlignment="Left" Margin="390,242,0,0" Width="100" Grid.Row="1" VerticalAlignment="Top" Click="btnClose_Click"/>
     </Grid>
 </Window>
