--- a/Windows/AnswerDialog.xaml
+++ b/Windows/AnswerDialog.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="EasyJob.Utils.AnswerDialog"
+﻿<Window x:Class="EasyJob.Windows.AnswerDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:EasyJob.Utils"
+        xmlns:local="clr-namespace:EasyJob.Windows"
         mc:Ignorable="d" Icon="pack://application:,,,/Images/icon.ico"
         Title="Select" ResizeMode="CanMinimize" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen">
     <Grid>
