--- a/Windows/AboutDialog.xaml
+++ b/Windows/AboutDialog.xaml
@@ -13,18 +13,19 @@
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="100"/>
+            <RowDefinition Height="110"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="0" Grid.Column="0">
             <Image Source="/Images/github.png" Height="100" Width="100" MouseLeftButtonDown="GithubImage_MouseLeftButtonDown" Cursor="Hand"/>
         </StackPanel>
-        <StackPanel Grid.Row="0" Grid.Column="1">
-            <Label Name="lblTitle" Content="EasyJob Executor" Margin="10,10,50,5"/>
-            <Label Name="lblLicence" Content="Licence: Apache-2.0" Margin="10,5,50,5"/>
-            <Label Name="lblVersion" Margin="10,5,50,5"/>
-        </StackPanel>
+        <Grid Grid.Row="0" Grid.Column="1">
+            <Label Name="lblTitle" Content="EasyJob Executor" Width="122" Margin="0,0,392,83" HorizontalAlignment="Right"/>
+            <Label Name="lblInfo" Content="Author" Width="514" Margin="0,27,0,56" HorizontalAlignment="Center" />
+            <Label Name="lblLicence" Content="Licence: Apache-2.0" Width="122" Margin="0,54,392,30" HorizontalAlignment="Right" />
+            <Label Name="lblVersion" Content="Version" Margin="0,80,0,0"/>
+        </Grid>
         <StackPanel Grid.Row="1" Grid.Column="0"/>
         <StackPanel Grid.Row="1" Grid.Column="1">
             <RichTextBox Margin="10,10,10,10" Name="RichTextBox1" HorizontalAlignment="Left" Width="472" Height="210" Background="Black" Foreground="White"
