--- a/App.xaml
+++ b/App.xaml
@@ -2,14 +2,13 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:EasyJob"
+             xmlns:ui="http://schemas.modernwpf.com/2019"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Styles/Button/ButtonStyle.xaml" />
-                <ResourceDictionary Source="Styles/ListBox/ListBoxStyle.xaml" />
-                <ResourceDictionary Source="Styles/TabControl/TabControlStyle.xaml" />
-                <ResourceDictionary Source="Styles/ToolTip/ToolTipStyle.xaml" />
+                <ui:ThemeResources />
+                <ui:XamlControlsResources />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
