--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,17 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:ej="clr-namespace:EasyJob.Windows"
         xmlns:local="clr-namespace:EasyJob" 
+        xmlns:myAttachedProperties="clr-namespace:EasyJob.Utils" 
         xmlns:ui="http://schemas.modernwpf.com/2019"
         ui:WindowHelper.UseModernWindowStyle="True"
-        xmlns:myAttachedProperties="clr-namespace:EasyJob.Utils" 
         mc:Ignorable="d" Icon="pack://application:,,,/Images/icon.ico"
         Title="EasyJob Executor" Height="450" Width="800" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <ContextMenu x:Key="RemoveTabContextMenu">
-            <MenuItem Name="cmdRemoveTab" Header="Remove tab" Click="ContextMenuRemoveTab_Click"/>
+            <MenuItem Header="Remove tab" Click="ContextMenuRemoveTab_Click"/>
         </ContextMenu>
         <ContextMenu x:Key="RemoveActionButtonContextMenu">
-            <MenuItem Name="cmdRemove" Header="Remove button" Click="ContextMenuRemoveActionButton_Click"/>
+            <MenuItem Header="Remove button" Click="ContextMenuRemoveActionButton_Click"/>
+        </ContextMenu>
+        <ContextMenu x:Key="AddActionButtonContextMenu">
+            <MenuItem Header="Add button" Click="ContextMenuAddActionButton_Click"/>
         </ContextMenu>
     </Window.Resources>
     <Grid>
@@ -25,56 +28,6 @@
             <RowDefinition Height="7"/>
             <RowDefinition Height="84"/>
         </Grid.RowDefinitions>
-        <Grid.Resources>
-            <DataTemplate x:Key="MainTabHeaderTemplate">
-                <Label Content="{Binding TabHeader}" Name="TabHeaderSelector" PreviewMouseDown="TabHeaderSelector_PreviewMouseDown"/>
-            </DataTemplate>
-            <DataTemplate x:Key="MainTabItemTemplate">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="7"/>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
-                    <ScrollViewer x:Name="MainScroll" Grid.Row="0" Background="#F7F7F7" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-                        <ItemsControl ItemsSource="{Binding TabActionButtons}" Margin="8">
-                            <ItemsControl.ItemsPanel>
-                                <ItemsPanelTemplate>
-                                    <WrapPanel Orientation="Horizontal" MaxWidth="{Binding ActualWidth, ElementName=MainScroll}" Margin="0,0,-10,0"/>
-                                </ItemsPanelTemplate>
-                            </ItemsControl.ItemsPanel>
-                            <ItemsControl.ItemTemplate>
-                                <DataTemplate>
-                                    <Button Margin="0,5,5,0" Padding="5" Content="{Binding ButtonText}" Click="ActionButton_Click" PreviewMouseDown="ActionButton_PreviewMouseDown">
-                                        <Button.ToolTip>
-                                            <ToolTip Content="{Binding ButtonDescription}" />
-                                        </Button.ToolTip>
-                                    </Button>
-                                </DataTemplate>
-                            </ItemsControl.ItemTemplate>
-                        </ItemsControl>
-                    </ScrollViewer>
-                    <GridSplitter Grid.Row="1" Height="5" HorizontalAlignment="Stretch"/>
-                    <TextBox Grid.Row="2" myAttachedProperties:TextBoxAttachedProperties.AutoScrollToEnd="True" Text="{Binding Path=TabTextBoxText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" AcceptsReturn="True" FontFamily="Consolas" Background="{Binding Path=ConsoleBackground}" Foreground="{Binding Path=ConsoleForeground}" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled"/>
-                    <Grid Grid.Row="3" Margin="0,5,0,5">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="30"/>
-                            <ColumnDefinition Width="30"/>
-                        </Grid.ColumnDefinitions>
-                        <Button Grid.Column="0" Margin="2,0,5,0" Padding="5" Content="Clear Output" Click="ClearOutputButton_Click" />
-                        <Button Grid.Column="2" Margin="0,0,5,0" Padding="5" Click="ScrollToTopButton_Click">
-                            <Image Source="pack://application:,,,/Images/up.png" Margin="-1"/>
-                        </Button>
-                        <Button Grid.Column="3"  Margin="0,0,5,0" Padding="5" Click="ScrollToBottomButton_Click">
-                            <Image Source="pack://application:,,,/Images/down.png" Margin="-1"/>
-                        </Button>
-                    </Grid>
-                </Grid>
-            </DataTemplate>
-        </Grid.Resources>
         <Menu Grid.Row="0" FlowDirection="LeftToRight" IsMainMenu="True">
             <MenuItem Header="File">
                 <MenuItem Header="Reload config" Click="ReloadConfigMenuItem_Click">
@@ -88,25 +41,78 @@
                     </MenuItem.Icon>
                 </MenuItem>
                 <Separator />
-                <MenuItem Header="Exit" Click="MenuItemExit_Click"/>
+                <MenuItem Header="Exit" Click="MenuItemExit_Click">
+                    <MenuItem.Icon>
+                        <Image Source="pack://application:,,,/Images/exit.png"/>
+                    </MenuItem.Icon>
+                </MenuItem>
             </MenuItem>
             <MenuItem Header="Help">
+                <MenuItem Header="Troubleshooting" Click="MenuTroubleshooting_Click">
+                    <MenuItem.Icon>
+                        <Image Source="pack://application:,,,/Images/troubleshoot.png"/>
+                    </MenuItem.Icon>
+                </MenuItem>
                 <MenuItem Header="About" Click="MenuAbout_Click">
                     <MenuItem.Icon>
                         <Image Source="pack://application:,,,/Images/about.png"/>
                     </MenuItem.Icon>
                 </MenuItem>
             </MenuItem>
-            <MenuItem Header="Workflow">
-                <MenuItem Header="Add Tab" Name="menuAddTab" Click="menuAddTab_Click"/>
-            </MenuItem>
-            <MenuItem Header="Settings">
-                <MenuItem Header="Import" Name="menuImport" Click="menuImport_Click"/>
-                <MenuItem Header="Export" Name="menuExport" Click="menuExport_Click"/>
-            </MenuItem>
         </Menu>
-        <TabControl x:Name="MainTab" Grid.Row="1" ItemTemplate="{StaticResource MainTabHeaderTemplate}"
-                    ContentTemplate="{StaticResource MainTabItemTemplate}">
+        <TabControl x:Name="MainTab" Grid.Row="1">
+            <TabControl.ItemTemplate>
+                <DataTemplate>
+                    <Label Content="{Binding TabHeader}" Name="TabHeaderSelector" PreviewMouseDown="TabHeaderSelector_PreviewMouseDown"/>
+                </DataTemplate>
+            </TabControl.ItemTemplate>
+            <TabControl.ContentTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="7"/>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <ScrollViewer x:Name="MainScroll" Grid.Row="0" Background="#F7F7F7" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" PreviewMouseDown="ActionButtonAdd_PreviewMouseDown">
+                            <ItemsControl ItemsSource="{Binding TabActionButtons}" Margin="8">
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <WrapPanel Orientation="Horizontal" MaxWidth="{Binding ActualWidth, ElementName=MainScroll}" Margin="0,0,-10,0"/>
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate>
+                                        <Button Margin="0,5,5,0" Padding="5" Content="{Binding ButtonText}" Click="ActionButton_Click" PreviewMouseDown="ActionButton_PreviewMouseDown">
+                                            <Button.ToolTip>
+                                                <ToolTip Content="{Binding ButtonDescription}" />
+                                            </Button.ToolTip>
+                                        </Button>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
+                        </ScrollViewer>
+                        <GridSplitter Grid.Row="1" Height="5" HorizontalAlignment="Stretch"/>
+                        <TextBox Grid.Row="2" myAttachedProperties:TextBoxAttachedProperties.AutoScrollToEnd="True" Text="{Binding Path=TabTextBoxText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" AcceptsReturn="True" FontFamily="Consolas" Background="{Binding Path=ConsoleBackground}" Foreground="{Binding Path=ConsoleForeground}" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled"/>
+                        <Grid Grid.Row="3" Margin="0,5,0,5">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="30"/>
+                                <ColumnDefinition Width="30"/>
+                            </Grid.ColumnDefinitions>
+                            <Button Grid.Column="0" Margin="2,0,5,0" Padding="5" Content="Clear Output" Click="ClearOutputButton_Click" />
+                            <Button Grid.Column="2" Margin="0,0,5,0" Padding="5" Click="ScrollToTopButton_Click">
+                                <Image Source="pack://application:,,,/Images/up.png" Margin="-1"/>
+                            </Button>
+                            <Button Grid.Column="3"  Margin="0,0,5,0" Padding="5" Click="ScrollToBottomButton_Click">
+                                <Image Source="pack://application:,,,/Images/down.png" Margin="-1"/>
+                            </Button>
+                        </Grid>
+                    </Grid>
+                </DataTemplate>
+            </TabControl.ContentTemplate>
         </TabControl>
         <GridSplitter Grid.Row="2" Height="5" HorizontalAlignment="Stretch"/>
         <Grid Grid.Row="3">
