--- a/Windows/AnswerDialog.xaml
+++ b/Windows/AnswerDialog.xaml
@@ -4,6 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EasyJob.Windows"
+        xmlns:ui="http://schemas.modernwpf.com/2019"
+        ui:WindowHelper.UseModernWindowStyle="True"
         mc:Ignorable="d" Icon="pack://application:,,,/Images/icon.ico"
         Title="Select" ResizeMode="CanMinimize" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen">
     <Grid>
@@ -18,7 +20,7 @@
         <Button Grid.Row="1" Content="OK" Click="OKButton_Click" Margin="5" HorizontalAlignment="Right"/>
         <Button Grid.Row="1" Content="Cancel" Click="CANCELButton_Click" Margin="5,5,30,5" HorizontalAlignment="Right"/>-->
 
-        <ScrollViewer Grid.Row="0" Margin="0,8,0,8" Background="AliceBlue" VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Auto">
+        <ScrollViewer Grid.Row="0" Margin="0,8,0,8" VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Auto">
             <ItemsControl x:Name="AnswerDialogItems" ItemsSource="{Binding Answers}" Margin="8">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
