--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -9,7 +9,7 @@
         ui:WindowHelper.UseModernWindowStyle="True"
         xmlns:myAttachedProperties="clr-namespace:EasyJob.Utils" 
         mc:Ignorable="d" Icon="pack://application:,,,/Images/icon.ico"
-        Title="EasyJob Executor" Height="450" Width="800" WindowStartupLocation="CenterScreen">
+        Title="EasyJob Executor" Height="450" Width="800" WindowStartupLocation="CenterScreen" Closing="Window_Closing">
     <Window.Resources>
         <ContextMenu x:Key="RemoveTabContextMenu">
             <MenuItem Name="cmdRemoveTab" Header="Remove tab" Click="ContextMenuRemoveTab_Click"/>
