--- a/Windows/ReorderTabsDialog.xaml
+++ b/Windows/ReorderTabsDialog.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EasyJob.Windows"
         mc:Ignorable="d" WindowStartupLocation="CenterScreen"
-        Title="ReorderTabsDialog" Height="360" Width="280">
+        Title="Reorder Tabs" Height="360" Width="280" ResizeMode="NoResize">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -33,8 +33,12 @@
         </Border>
 
         <DockPanel Grid.Column="1" Height="80" HorizontalAlignment="Center">
-            <Button Content="Up" DockPanel.Dock="Top" HorizontalAlignment="Center" Click="TabsReorderUp_Click"/>
-            <Button Content="Down" DockPanel.Dock="Bottom" HorizontalAlignment="Center" Click="TabsRedorderDown_Click"/>
+            <Button DockPanel.Dock="Top" HorizontalAlignment="Center" Height="28" Width="28" Click="TabsReorderUp_Click">
+                <Image Source="pack://application:,,,/Images/up.png" Margin="-4"/>
+            </Button>
+            <Button DockPanel.Dock="Bottom" HorizontalAlignment="Center" Height="28" Width="28" Click="TabsRedorderDown_Click">
+                <Image Source="pack://application:,,,/Images/down.png" Margin="-4"/>
+            </Button>
         </DockPanel>
         
     </Grid>
