--- a/Windows/RenameTabDialog.xaml
+++ b/Windows/RenameTabDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="EasyJob.Windows.NewTabDialog"
+﻿<Window x:Class="EasyJob.Windows.RenameTabDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,7 @@
         ui:WindowHelper.UseModernWindowStyle="True"
         xmlns:local="clr-namespace:EasyJob.Windows"
         mc:Ignorable="d" ResizeMode="NoResize" WindowStartupLocation="CenterScreen"
-        Title="Create new Tab" Height="260" Width="400">
+        Title="Rename tab" Height="260" Width="400">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="90"/>
@@ -16,9 +16,10 @@
             <RowDefinition Height="40"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Padding="12" Grid.Row="0" Text="Crate new tab" Style="{StaticResource HeaderTextBlockStyle}" Background="#E2E2E2"/>
+        <TextBlock Padding="12" Grid.Row="0" Text="Rename current tab" Style="{StaticResource HeaderTextBlockStyle}" Background="#E2E2E2"/>
         <Label Content="Please specify new tab name" Margin="8" Grid.Row="1"/>
-        <TextBox x:Name="CreateNewTabTextBox" Grid.Row="2" Margin="10,10,10,10" Height="16"/>
-        <Button Grid.Row="3" Content="Add" Margin="0,0,10,0" HorizontalAlignment="Right" Click="CreateNewTabButton_Click"/>
+        <TextBox x:Name="RenameTabTextBox" Grid.Row="2" Margin="10,10,10,10" Height="16"/>
+        <Button Grid.Row="3" Content="Rename" Margin="0,0,10,0" HorizontalAlignment="Right" Click="RenameTabButton_Click"/>
+        <Button Grid.Row="3" Content="Cancel" Margin="0,0,85,0" HorizontalAlignment="Right" Click="CancelRenameButton_Click"/>
     </Grid>
 </Window>
